# ccalogging

./: .gitignore  Makefile  README.md  pyproject.toml
archlinux/: PKGBUILD
ccalogging/: __init__.py  logging.py
tests/: test_ccalogging.py
