[tool.poetry]
name = "ccalogging"
version = "0.5.0"
description = "Simple logging"
authors = ["ccdale <chris.charles.allison+ccalogging@gmail.com>"]
license = "GPL 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
